/**
 * Apple Strings File
 * Generated by Twine 0.10.1
 * Language: en
 */

/**********  GENERAL  **********/

"app_name" = "HiringApp";

"error" = "Error";

"error_message" = "An error occured. Please, try again!";

"which_technology" = "Pick a technology";

"ok" = "OK";

"which_topic" = "Pick a topic";


/**********  Contact form  **********/

"cf_title" = "If you want to apply for the backend position, leave us your contact and we will contact you as fast as we can. Thanks!";

"cf_name" = "Name *";

"cf_lastname" = "Surname *";

"cf_linkedin" = "LinkedIn";

"cf_email" = "Email *";

"cf_phone" = "Phone *";

"cf_send" = "Send";

"cf_formSentTitle" = "Thank you for your application. We will contact you soon.";

"cf_formSentButton" = "Continue";

"cf_placeholder" = "Type here…";


/**********  WALKTHROUGH  **********/

"walkthrough_title1" = "Who are we?";

"walkthrough_title2" = "What do we do?";

"walkthrough_title3" = "Where are we?";

"walkthrough_subtitles1" = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.";

"walkthrough_subtitles2" = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.";

"walkthrough_subtitles3" = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua";

"walkthrough_knowMoreButton" = "Find out more about Visual Engineering";

"walkthrough_workWithUsButton" = "Work with us";
