...
        label.text = R.string.localizable.cf_formSentTitle()
        label.style = Style.title3
        label.backgroundColor = Constants.labelBackgroundColor
        label.textColor = Constants.buttonTextColor
        label.numberOfLines = 0
        label.textAlignment = .center
        label.accessibilityLabel = "labelContactFormSent"
        return label
    }()
    
    let button: RoundedButton = {
        let button = RoundedButton()
        button.styledText = R.string.localizable.cf_formSentButton()
...
